ci: Update runner environment to use ubuntu-latest Changed the runner environment from self-hosted and ubuntu-24.04 to ubuntu-latest for consistency and improved compatibility across workflows.
Signed-off-by: Chiho Sin <chihosin@icloud.com>

--- a/.github/workflows/fobe_build.yml
+++ b/.github/workflows/fobe_build.yml
@@ -30,7 +30,7 @@ permissions:
 jobs:
   build:
     name: Build ${{ inputs.board }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Clean workspace
         run: |
