--- a/.github/workflows/fobe_release.yml
+++ b/.github/workflows/fobe_release.yml
@@ -22,7 +22,7 @@ jobs:
         port:
           - espressif
           - nordic
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - name: Generate matrix
@@ -47,7 +47,7 @@ jobs:
 
   version:
     name: Determine Version
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
         with:
@@ -105,7 +105,7 @@ jobs:
   create-release:
     name: Create or Update Release
     needs: [setup, version]
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
